--- a/bower.json
+++ b/bower.json
@@ -26,10 +26,15 @@
     "paper-item": "PolymerElements/paper-item#^2.0.0",
     "paper-menu-button": "PolymerElements/paper-menu-button#^2.0.0",
     "paper-button": "PolymerElements/paper-button#^2.0.0",
-    "paper-spinner": "PolymerElements/paper-spinner#^2.0.0"
+    "paper-spinner": "PolymerElements/paper-spinner#^2.0.0",
+    "iron-icons": "PolymerElements/iron-icons#^2.0.1",
+    "iron-icon": "PolymerElements/iron-icon#^2.0.1",
+    "iron-form": "PolymerElements/iron-form#^2.0.1",
+    "iron-ajax": "PolymerElements/iron-ajax#^2.0.6"
   },
   "resolutions": {
-    "polymer": "^2.0.0"
+    "polymer": "^2.0.0",
+    "webcomponentsjs": "^v1.0.2"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0"
